--- a/debian/control
+++ b/debian/control
@@ -12,16 +12,16 @@ Uploaders: Sune Vuorela <debian@pusling.com>,
 Build-Depends: debhelper (>= 10.3),
                dpkg-dev (>= 1.17.14),
                libgl1-mesa-dri,
-               libqt5opengl5-dev (>= 5.9.3+dfsg~),
-               libqt5xmlpatterns5-dev (>= 5.9.3~),
+               libqt5opengl5-dev (>= 5.9.4+dfsg~),
+               libqt5xmlpatterns5-dev (>= 5.9.4~),
                pkg-kde-tools (>= 0.15.17~),
                python,
-               qtbase5-private-dev (>= 5.9.3~),
+               qtbase5-private-dev (>= 5.9.4~),
                xauth,
                xvfb
-Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.2+dfsg~) <!nodoc>,
-                     qtbase5-doc-html (>= 5.9.2+dfsg~) <!nodoc>,
-                     qttools5-dev-tools (>= 5.9.2-2~) <!nodoc>
+Build-Depends-Indep: libqt5sql5-sqlite (>= 5.9.3+dfsg~) <!nodoc>,
+                     qtbase5-doc-html (>= 5.9.3+dfsg~) <!nodoc>,
+                     qttools5-dev-tools (>= 5.9.3~) <!nodoc>
 Standards-Version: 4.1.2
 Homepage: http://qt-project.org/
 Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtdeclarative.git
