--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,8 @@ Build-Depends-Indep: qtbase5-doc-html (>= 5.9.5+dfsg~) <!nodoc>,
                      qttools5-dev-tools (>= 5.9.5~) <!nodoc>
 Standards-Version: 4.1.2
 Homepage: http://qt-project.org/
-Vcs-Git: https://anonscm.debian.org/git/pkg-kde/qt/qtdeclarative.git
-Vcs-Browser: https://anonscm.debian.org/cgit/pkg-kde/qt/qtdeclarative.git
+Vcs-Git: https://salsa.debian.org/qt-kde-team/qt/qtdeclarative.git
+Vcs-Browser: https://salsa.debian.org/qt-kde-team/qt/qtdeclarative
 
 Package: libqt5qml5
 Provides: qtdeclarative-abi-5-9-4
